--- a/app/src/main/res/layout/activity_sub__task.xml
+++ b/app/src/main/res/layout/activity_sub__task.xml
@@ -5,15 +5,12 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".View.Order">
+    tools:context=".View.Sub_Task">
 
-    <android.support.design.widget.TabLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:id="@+id/tab_order"/>
-
-    <android.support.v4.view.ViewPager
+    <android.support.v7.widget.RecyclerView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:id="@+id/view_Pager_order"/>
+        android:id="@+id/Recicler_sub_task">
+
+    </android.support.v7.widget.RecyclerView>
 </LinearLayout>
