--- a/app/src/main/res/layout/cardorder.xml
+++ b/app/src/main/res/layout/cardorder.xml
@@ -1,16 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="wrap_content">
 
     <android.support.v7.widget.CardView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:id="@+id/card_id">
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical">
+            android:orientation="vertical"
+            android:padding="12dp">
             <LinearLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -24,7 +26,8 @@
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Blog 123"/>
+                    android:text="Blog 123"
+                    android:id="@+id/site_work"/>
 
             </LinearLayout>
             <LinearLayout
@@ -35,12 +38,13 @@
                 <ImageButton
                     android:layout_width="25dp"
                     android:layout_height="31dp"
-                    android:src="@android:drawable/ic_menu_mylocation" />
+                    android:src="@drawable/point" />
 
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Calle 16 -A #43"/>
+                    android:text="Calle 16 -A #43"
+                    android:id="@+id/address_work"/>
 
             </LinearLayout>
             <LinearLayout
@@ -55,7 +59,8 @@
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="3"/>
+                    android:text="3"
+                    android:id="@+id/activities_work"/>
             </LinearLayout>
             <LinearLayout
                 android:layout_width="wrap_content"
@@ -68,13 +73,14 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="0%"/>
+                android:text="0%"
+                android:id="@+id/status_work"/>
             </LinearLayout>
 
             <ProgressBar
                 android:id="@+id/progressBar"
                 style="@style/Base.Widget.AppCompat.ProgressBar.Horizontal"
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content" />
 
         </LinearLayout>
