--- a/app/src/main/res/layout/activity_order.xml
+++ b/app/src/main/res/layout/activity_order.xml
@@ -14,6 +14,17 @@
 
     <android.support.v4.view.ViewPager
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:id="@+id/view_Pager_order"/>
+        android:layout_height="450dp"
+        android:id="@+id/view_Pager_order">
+    </android.support.v4.view.ViewPager>
+
+    <android.support.design.widget.BottomNavigationView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/navigation"
+        android:layout_gravity="start"
+        app:menu="@menu/menu"/>
+
+
+
 </LinearLayout>
