--- a/app/src/main/res/layout/cardorder.xml
+++ b/app/src/main/res/layout/cardorder.xml
@@ -81,7 +81,8 @@
                 android:id="@+id/progressBar"
                 style="@style/Base.Widget.AppCompat.ProgressBar.Horizontal"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content" />
+                android:layout_height="wrap_content"
+                android:progress="6"/>
 
         </LinearLayout>
 
