--- a/app/src/main/res/layout/activity_order.xml
+++ b/app/src/main/res/layout/activity_order.xml
@@ -5,7 +5,11 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:weightSum="10"
-    tools:context=".View.Order">
+    android:orientation="vertical"
+    tools:context=".View.Order"
+    android:theme="@style/AppTheme">
+
+    <include layout="@layout/toolbar" android:id="@+id/toolbar_task"/>
 
     <android.support.design.widget.TabLayout
         android:id="@+id/tab_order"
@@ -13,36 +17,20 @@
         android:layout_height="wrap_content"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-         />
+        app:layout_constraintTop_toBottomOf="@id/toolbar_task" />
 
     <android.support.v4.view.ViewPager
         android:id="@+id/view_Pager_order"
         android:layout_width="wrap_content"
         android:layout_height="0dp"
-        app:layout_constraintBottom_toTopOf="@+id/navigation"
+        app:layout_constraintBottom_toTopOf="@+id/bottommenu"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/tab_order" />
 
-
-    <android.support.design.widget.BottomNavigationView
-        android:id="@+id/navigation"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_gravity="start"
-        app:menu="@menu/menu"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"
-        />
-        android:layout_width="match_parent"
-        android:layout_height="fill_parent"
-        android:id="@+id/view_Pager_order">
-
-        <include layout="@layout/button_bar"
-            android:id="@+id/button_bar" />
-    </android.support.v4.view.ViewPager>
+    <include
+        android:id="@+id/bottommenu"
+        layout="@layout/button_bar" />
 
 </android.support.constraint.ConstraintLayout>
