--- a/app/src/main/res/layout/button_bar.xml
+++ b/app/src/main/res/layout/button_bar.xml
@@ -2,10 +2,13 @@
 
 <android.support.design.widget.BottomNavigationView
     xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/navigation"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
     android:layout_gravity="start"
-    app:menu="@menu/menu"/>
-
+    app:menu="@menu/menu"
+    app:layout_constraintRight_toRightOf="parent"
+    app:layout_constraintLeft_toLeftOf="parent"
+    app:layout_constraintBottom_toBottomOf="parent"
+    />
