--- a/app/src/main/res/layout/card_sub_task.xml
+++ b/app/src/main/res/layout/card_sub_task.xml
@@ -3,11 +3,11 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_margin="@dimen/activity_horizontal_margin"
+    android:layout_margin="@dimen/card_margin"
     android:id="@+id/card_sub_task">
 
     <LinearLayout
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical"
         android:id="@+id/layout_sub_task">
@@ -21,18 +21,33 @@
             android:layout_height="100dp"
             android:id="@+id/icon_sub_task"
             android:layout_gravity="center"/>
-        <TextView
+        <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:id="@+id/text_sub_task"
-            android:layout_gravity="center"/>
+            android:orientation="horizontal"
+            android:layout_gravity="center">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/text_sub_task"
+                />
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/percentage"
+                />
+
+        </LinearLayout>
         <ProgressBar
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             style="@style/Base.Widget.AppCompat.ProgressBar.Horizontal"
             android:id="@+id/progress_sub_task"
             android:layout_gravity="center"
+            android:minHeight="50dp"
             android:progress="20"/>
     </LinearLayout>
+
 </android.support.v7.widget.CardView>
 
