--- a/app/src/main/res/layout/card_task_to_be.xml
+++ b/app/src/main/res/layout/card_task_to_be.xml
@@ -7,6 +7,7 @@
     <android.support.v7.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:id="@+id/card_task_to_do"
         android:padding="@dimen/activity_horizontal_margin">
 
             <LinearLayout
