--- a/app/src/main/res/layout/login.xml
+++ b/app/src/main/res/layout/login.xml
@@ -18,6 +18,8 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="@string/login"
+            android:textAlignment="center"
+            android:textSize="@dimen/title_task"
             android:textStyle="bold" />
         <EditText
             android:layout_width="match_parent"
@@ -35,14 +37,14 @@
 
 
     </LinearLayout>
+
     <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
         android:id="@+id/login_work"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
-        android:layout_centerVertical="true"
-        android:layout_below="@+id/linear"
-        android:text="@string/login"/>
+        android:text="@string/login" />
 
 
 </RelativeLayout>
