Refactor Toolbar in Sub_task

--- a/app/src/main/res/layout/activity_sub__task.xml
+++ b/app/src/main/res/layout/activity_sub__task.xml
@@ -7,13 +7,87 @@
     android:orientation="vertical"
     tools:context=".View.Sub_Task">
 
-    <include layout="@layout/toolbar" android:id="@+id/toolbar_sub_task"/>
+    <android.support.v7.widget.Toolbar
+        android:id="@+id/my_toolbar_sub_task"
+        android:layout_width="match_parent"
+        android:layout_height="100dp"
+        android:background="?attr/colorPrimary"
+        android:elevation="@dimen/elevation_toolbar"
+        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
+        app:popupTheme="@style/ThemeOverlay.AppCompat.Light">
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal">
+                <ImageView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:src="@drawable/point"/>
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textColor="@color/toolbar_color"
+                    android:id="@+id/txt_title_toolbar_sub" />
+            </LinearLayout>
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal">
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textColor="@color/toolbar_color"
+                    android:text="@string/Wo_sub_task"/>
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textColor="@color/toolbar_color"
+                    android:id="@+id/txt_wo_toolbar_sub" />
+            </LinearLayout>
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal">
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textColor="@color/toolbar_color"
+                    android:text="@string/date_sub_task"/>
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textColor="@color/toolbar_color"
+                    android:id="@+id/txt_date_toolbar_sub" />
+            </LinearLayout>
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal">
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textColor="@color/toolbar_color"
+                    android:text="@string/total_sub_task"/>
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textColor="@color/toolbar_color"
+                    android:id="@+id/txt_size_toolbar_sub" />
+            </LinearLayout>
+        </LinearLayout>
+    </android.support.v7.widget.Toolbar>
+
     <ProgressBar
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         style="@style/Base.Widget.AppCompat.ProgressBar.Horizontal"
         android:layout_margin="@dimen/activity_horizontal_margin"
         android:progress="24"
+        android:scaleY="6"
         />
     <android.support.v7.widget.RecyclerView
         android:layout_width="match_parent"
