--- a/app/src/main/res/layout/fragment_new_order.xml
+++ b/app/src/main/res/layout/fragment_new_order.xml
@@ -14,7 +14,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/total_new"
-            android:textSize="@dimen/title_task"
+            android:textSize="@dimen/body_task"
             android:layout_marginBottom="@dimen/activity_horizontal_margin"
             android:layout_marginTop="@dimen/activity_horizontal_margin"/>
         <android.support.v7.widget.RecyclerView
