--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,4 +5,5 @@
     <color name="colorAccent">#03A9F4</color>
     <color name="primary_text_color">#212121</color>
     <color name="segundary_text_color">#757575</color>
+    <color name="toolbar_color">#ffffff</color>
 </resources>
