--- a/app/src/main/res/layout/activity_order.xml
+++ b/app/src/main/res/layout/activity_order.xml
@@ -1,36 +1,26 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
+
+<android.support.v4.widget.DrawerLayout
+xmlns:android="http://schemas.android.com/apk/res/android"
+xmlns:tools="http://schemas.android.com/tools"
+xmlns:app="http://schemas.android.com/apk/res-auto"
+android:id="@+id/drawer_layout"
+android:layout_width="match_parent"
+android:layout_height="match_parent"
+android:fitsSystemWindows="true"
+tools:context=".View.Order">
+
+<!-- Layout real de la actividad -->
+<include layout="@layout/drawable_menu" />
+
+<!-- Layout del menú lateral (Navigation View) -->
+<android.support.design.widget.NavigationView
+    android:id="@+id/navview"
+    android:layout_width="wrap_content"
     android:layout_height="match_parent"
-    android:weightSum="10"
-    android:orientation="vertical"
-    tools:context=".View.Order"
-    android:theme="@style/AppTheme">
+    android:fitsSystemWindows="true"
+    android:layout_gravity="start"
+    app:headerLayout="@layout/toolbar_sub_task"
+    app:menu="@menu/menu" />
 
-    <include layout="@layout/toolbar" android:id="@+id/toolbar_task"/>
-
-    <android.support.design.widget.TabLayout
-        android:id="@+id/tab_order"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/toolbar_task" />
-
-    <android.support.v4.view.ViewPager
-        android:id="@+id/view_Pager_order"
-        android:layout_width="wrap_content"
-        android:layout_height="0dp"
-        app:layout_constraintBottom_toTopOf="@+id/bottommenu"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/tab_order" />
-
-    <include
-        android:id="@+id/bottommenu"
-        layout="@layout/button_bar" />
-
-</android.support.constraint.ConstraintLayout>
+</android.support.v4.widget.DrawerLayout>
