--- a/app/src/main/res/layout/button_bar.xml
+++ b/app/src/main/res/layout/button_bar.xml
@@ -1,5 +1,4 @@
 <?xml version="1.0" encoding="utf-8"?>
-
 <android.support.design.widget.BottomNavigationView
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
@@ -8,7 +7,12 @@
     android:layout_height="wrap_content"
     android:layout_gravity="start"
     app:menu="@menu/menu"
+    android:background="@color/toolbar_color"
     app:layout_constraintRight_toRightOf="parent"
     app:layout_constraintLeft_toLeftOf="parent"
     app:layout_constraintBottom_toBottomOf="parent"
     />
+
+ <!--   android.support.design.widget.BottomNavigationView
+<android.support.design.internal.BottomNavigationMenuView
+ -->
